--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             #container {
                 width: 100%;
                 height: 100vh;
+                max-width: 1000px;
+                max-height: 520px;
                 overflow: auto;
             }
 
