--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <div id="update-time">
                 <p></p>
             </div>
+            <div id="settings">
+                <a href="settings.html">settings</a>
+            </div>
         </div>
     </body>
 </html>
