Show current settings on load

--- a/settings.html
+++ b/settings.html
@@ -19,11 +19,11 @@
                 <label for="lon">Longitude</label>
                 <input id="lon" type="text">
                 <input type="button" value="Save" onclick="saveLatLon()">
-                <input type="button" value="Cancel">
+                <input type="button" value="Cancel" onclick="window.location = 'index.html'">
             </form>
 
             <div id="settings">
-                
+
             </div>
         </div>
     </body>
