Add some redirects around settings to make it less user hostile

--- a/settings.html
+++ b/settings.html
@@ -12,6 +12,8 @@
     <body>
         <div id="container" class="settings-container">
             <h1>Settings</h1>
+            <p class="body-text">Location is important! If you don't have your current latitude and longitude committed to memory, click "get location" to get them from your browser (you'll have to give permission for this).</p> 
+            <p class="body-text">If you don't think that's an accurate location, <a href="https://maps.google.com/">google maps</a> is a good place to get a location. Enter your address there, then copy and paste the latitude and longitude from the URL into the boxes below.</p>
 
             <form>
                 <label for="lat">Latitude</label> <a class="helper-link" onclick="getLocation()">get location</a>
