--- a/settings.html
+++ b/settings.html
@@ -15,11 +15,15 @@
             <p class="body-text">Location is important! If you don't have your current latitude and longitude committed to memory, click "get location" to get them from your browser (you'll have to give permission for this).</p> 
             <p class="body-text">If you don't think that's an accurate location, <a href="https://maps.google.com/">google maps</a> is a good place to get a location. Enter your address there, then copy and paste the latitude and longitude from the URL into the boxes below.</p>
 
+            <div id="errors"></div>
+
             <form>
                 <label for="lat">Latitude</label> <a class="helper-link" onclick="getLocation()">get location</a>
                 <input id="lat" type="text">
                 <label for="lon">Longitude</label>
                 <input id="lon" type="text">
+                <div id="station-radio-group">
+                </div>
                 <input type="button" value="Save" onclick="saveLatLon()">
                 <input type="button" value="Cancel" onclick="window.location = 'index.html'">
             </form>
