SVG styling problems

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p></p>
             </div>
             <div id="settings">
-                <a href="settings.html">settings</a>
+                <a href="settings.html"><object class="gear" data="images/settings.svg" type="image/svg+xml"></object></a>
             </div>
         </div>
     </body>
