A couple minor styling updates

--- a/settings.html
+++ b/settings.html
@@ -12,8 +12,7 @@
     <body>
         <div id="container" class="settings-container">
             <h1>Settings</h1>
-            <p class="body-text">Location is important! If you don't have your current latitude and longitude committed to memory, click "get location" to get them from your browser (you'll have to give permission for this).</p> 
-            <p class="body-text">If you don't think that's an accurate location, <a href="https://maps.google.com/">google maps</a> is a good place to get a location. Enter your address there, then copy and paste the latitude and longitude from the URL into the boxes below.</p>
+            <p class="body-text">Click "get location" to populate longitude and latitude based on your current location (you'll have to give permission for this).</p> 
 
             <div id="errors"></div>
 
@@ -24,8 +23,8 @@
                 <input id="lon" type="text">
                 <div id="station-radio-group">
                 </div>
-                <input type="button" value="Save" onclick="saveLatLon()">
-                <input type="button" value="Cancel" onclick="window.location = 'index.html'">
+                <input class="secondary" type="button" value="Cancel" onclick="window.location = 'index.html'">
+                <input class="primary" type="button" value="Save" onclick="saveLatLon()">
             </form>
 
             <div id="settings">
