Some settings icon stylings - #20

--- a/index.html
+++ b/index.html
@@ -41,11 +41,19 @@
                 <h2 id="f3-title"></h2>
                 <p id="f3"></p>
             </div>
-            <div id="update-time">
-                <p></p>
-            </div>
             <div id="settings">
-                <a href="settings.html"><object class="gear" data="images/settings.svg" type="image/svg+xml"></object></a>
+                <a href="settings.html">
+                    <svg id="settings-gear" width="40px" height="40px" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <g>
+                                <path d="M34.86,21.95 C34.94,21.31 35,20.66 35,20 C35,19.34 34.94,18.69 34.86,18.05 L39.09,14.74 C39.47,14.44 39.58,13.9 39.33,13.46 L35.33,6.53 C35.08,6.1 34.56,5.92 34.11,6.1 L29.13,8.11 C28.1,7.32 26.97,6.65 25.75,6.14 L25,0.84 C24.91,0.37 24.5,8.8817842e-16 24,8.8817842e-16 L16,8.8817842e-16 C15.5,8.8817842e-16 15.09,0.37 15.01,0.84 L14.26,6.14 C13.04,6.65 11.91,7.31 10.88,8.11 L5.9,6.1 C5.45,5.93 4.93,6.1 4.68,6.53 L0.68,13.46 C0.43,13.89 0.54,14.43 0.92,14.74 L5.14,18.05 C5.06,18.69 5,19.34 5,20 C5,20.66 5.06,21.31 5.14,21.95 L0.92,25.26 C0.54,25.56 0.43,26.1 0.68,26.54 L4.68,33.47 C4.93,33.9 5.45,34.08 5.9,33.9 L10.88,31.89 C11.91,32.68 13.04,33.35 14.26,33.86 L15.01,39.16 C15.09,39.63 15.5,40 16,40 L24,40 C24.5,40 24.91,39.63 24.99,39.16 L25.74,33.86 C26.96,33.35 28.09,32.69 29.12,31.89 L34.1,33.9 C34.55,34.07 35.07,33.9 35.32,33.47 L39.32,26.54 C39.57,26.11 39.46,25.57 39.08,25.26 L34.86,21.95 L34.86,21.95 Z M20,27 C16.13,27 13,23.87 13,20 C13,16.13 16.13,13 20,13 C23.87,13 27,16.13 27,20 C27,23.87 23.87,27 20,27 Z" id="Shape"></path>
+                            </g>
+                        </g>
+                    </svg>
+                </a>
+                <span id="update-time">
+                    <p></p>
+                </span>
             </div>
         </div>
     </body>
