Set temperature and humidity circle sizes with rems (wind arrow is broken) - #18

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div id="container">
             <div id="current-conditions">
                 <div id="temperature">
-                    <svg id="humidity" class="hide">
-                        <circle cx="95" cy="95" r="96" />
+                    <svg id="humidity" viewBox="0 0 100 100" class="hide">
+                        <circle cx="50" cy="50" r="50" />
                     </svg>
                     <div class="inner">
                         <p class="big-number"></p>
