--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Good Morning Display II</title>
-        <meta name="viewport" content="width=device-width, intial-scale=1">
+        <meta name="viewport" content="width=device-width, intial-scale=1, maximum-scale=1.0">
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
         <link href="styles/main.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="javascript/main.js"></script>
