--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
         <link href="styles/main.css" rel="stylesheet">
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="javascript/main.js"></script>
     </head>
