Add credit for gear icon. Fixes #21

--- a/settings.html
+++ b/settings.html
@@ -30,6 +30,11 @@
             <div id="settings">
 
             </div>
+            <div>
+                <h1>About</h1>
+                <p class="body-text">Hacked together with love in NYC.</p>
+                <p class="body-text">The settings <a href="https://thenounproject.com/landan/collection/gear/?i=1181256">Gear by Landan Lloyd from the Noun Project</a></p>
+            </div>
+        </body>
         </div>
-    </body>
 </html>
