Add manifest.json for web app mode

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Good Morning Display II</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
+        <link rel="manifest" href="manifest.json">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="GMD2">
+        <meta name="apple-mobile-web-app-title" content="GMD2">
+        <meta name="msapplication-starturl" content="https://jpreardon.com/gmd/index.html">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="styles/main.css" rel="stylesheet">
         <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="javascript/main.js"></script>
     </head>
-
     <body>
         <div id="container">
             <div id="current-conditions">
