--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Good Morning Display II - Settings</title>
-        <meta name="viewport" content="width=device-width, intial-scale=1">
+        <link rel="manifest" href="manifest.json">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="GMD2">
+        <meta name="apple-mobile-web-app-title" content="GMD2">
+        <meta name="msapplication-starturl" content="https://jpreardon.com/gmd/index.html">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="styles/main.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="javascript/main.js"></script>
