--- a/cititest.html
+++ b/cititest.html
@@ -23,6 +23,7 @@
             var stationlist = []
 
             function getStationList() {
+                var time = Date.now()
                 return new Promise( (resolve, reject) => {
                     $.getJSON( STATION_INFO_URL ) 
                     .done( (json) => {
@@ -30,7 +31,7 @@
                         json.data.stations.forEach(station => {
                             stationlist.push( {name: station.name, id: station.station_id} )
                         });
-                        
+
                         // Sort here
                         stationlist.sort(function (a, b) {
                             var nameA = a.name.toUpperCase()
@@ -45,10 +46,12 @@
                             return 0
                         })
 
+                        var optionValues = ""
                         stationlist.forEach(station => {
-                            document.getElementById("station-list").innerHTML += `<option value="${station.id}">${station.name}</option>`
+                            optionValues += `<option value="${station.id}">${station.name}</option>`
                         })
-                                             
+                        document.getElementById("station-list").innerHTML = optionValues
+
                     })
                     .fail( (jqxhr, textStatus, error) => {
                         console.log(textStatus)
